still fixing overflowing footer..

--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -32,12 +32,6 @@
 }
 
 .footer {
-    position:fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: red;
-    color: white;
-    text-align: center;
-
+  border: 1px solid black;
+  margin-left: 0.1vh;
  }
